--- a/src/main/resources/templates/product/complete.html
+++ b/src/main/resources/templates/product/complete.html
@@ -8,8 +8,8 @@
             <!-- 제목, 페이지 네비게이션 -->
             <nav>
                 <h1>주문완료</h1>
-                <p>
-                    HOME > 장바구니 > 주문결제 > <strong>주문완료</strong>
+                <p class="completeNav">
+                    장바구니 > 주문결제 > <strong>주문완료</strong>
                 </p>
             </nav>
 
