--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -3,9 +3,6 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/product/product_layout.html}">
     <head>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script th:src="@{/js/product/product_list.js}"></script>
     </head>
     <section layout:fragment="content" class="list">
@@ -40,8 +37,7 @@
                                 <del class="org-price" th:if="${product.discount ne 0}" th:text="${#numbers.formatInteger(product.price, 0, 'COMMA')}"></del>
                                 <span class="discount" th:if="${product.discount ne 0}">[[${product.discount}]]%</span>
                             </li>
-                            <li><span class="free-delivery" th:if="${product.delivery eq 0}">무료배송</span></li>
-                            <li><span class="delivery" th:if="${product.delivery ne 0}" th:text="'배송비 '+${#numbers.formatInteger(product.delivery, 0, 'COMMA')}+'원'"></span></li>
+                            <li><span th:class="${product.delivery eq 0 ? 'free-delivery' : 'delivery'}"  th:text="'배송비 '+${#numbers.formatInteger(product.delivery, 0, 'COMMA')}+'원'">무료배송</span></li>
                         </ul>
                     </td>
                     <td>
