--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -23,6 +23,7 @@
 #product > .cart > nav > .cartNav {
     font-weight: bold;
 }
+
 #product > .cart > nav > p * {
     color:gray;
 }
@@ -777,7 +778,7 @@
     display: block; /* 줄을 긋는 텍스트를 블록 요소로 설정하여 줄을 아래로 내림 */
     color: gray;
 }
-#product > .cart > form > table .free-delivery {
+.free-delivery {
     background-image: url('../images/product/ico_free_delivery.gif');
     background-repeat: no-repeat;
     background-position: center center;
@@ -942,7 +943,7 @@
 #product > .order > form > .final {
   float: right;
   width: 360px;
-  height: 412px;
+  height: 450px;
   padding: 20px;
   margin-top: 12px;
   background: #fff;
