--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -964,7 +964,7 @@
 #product > .order > form > .final > table tr {}
 #product > .order > form > .final > table tr:nth-last-child(2) {}
 #product > .order > form > .final > table tr:nth-last-child(1) td {font-size: 20px;}
-#product > .order > form > .final > table tr:nth-last-child(1) td:last-child {
+#product > .order > form > .final > table tr:nth-last-child(1) td:nth-child(2) {
   color: #ff006c;
   font-size: 20px;
   font-weight: bold;
@@ -975,7 +975,7 @@
   font-size: 14px;
   color: #555;
 }
-#product > .order > form > .final > table td:last-child {
+#product > .order > form > .final > table td:nth-child(2) {
   text-align: right;
 }
 #product > .order > form > .final > input[type=button] {
@@ -1035,8 +1035,8 @@
   padding: 6px;
 }
 
-#product > .order > form > .delivery > table input[name=addr1] {width: 400px;}
-#product > .order > form > .delivery > table input[name=addr2] {width: 400px;}
+#product > .order > form > .delivery > table input[name=recipAddr1] {width: 400px;}
+#product > .order > form > .delivery > table input[name=recipAddr2] {width: 400px;}
 #product > .order > form > .delivery > table input[type=button] {
   padding: 4px 6px;
   border: 1px solid #ccc;
