--- a/src/main/resources/templates/admin/cs/list.html
+++ b/src/main/resources/templates/admin/cs/list.html
@@ -2,107 +2,134 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/admin/admin_layout :: content}">
-  <section layout:fragment="content" id="notice">
+<head>
+  <script th:src="@{/js/cs/cs_qnaCate.js}"></script>
+  <script th:src="@{/js/admin/cs_list.js}"></script>
+  <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
+</head>
+<section layout:fragment="content" th:id="${group}" class="group">
 
-    <head>
-      <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
-    </head>
+  <nav>
+    <h3>[[${groupName}]] 보기</h3>
+    <p>
+      HOME > 고객센터 > <strong>[[${groupName}]]</strong>
+    </p>
+  </nav>
 
-    <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
-      <!-- nav 들어올 영역 -->
-    </nav>
-    <section id="list">
-      <!--공지사항만-->
-      <select>
-        <option>유형선택</option>
+  <section id="list">
+    <!--only notice-->
+    <select name="cate1" th:if="${group eq 'notice'}" class="shot">
+      <option>유형선택</option>
+      <option th:each="ct1:${cate1List}" th:value="${ct1.cate1}" th:selected="${ct1.cate1 eq selectedCate1}">
+        [[${ct1.cate1_name}]]
+      </option>
+    </select>
+
+    <!--only faq, qna-->
+    <input type="hidden" name="url" th:value="${path}">
+    <th:block th:if="${group eq 'faq' or group eq 'qna'}">
+      <select name="cate1" class="shot">
+        <option>1차유형</option>
+        <option th:each="ct1:${cate1List}" th:value="${ct1.cate1}" th:selected="${ct1.cate1 eq selectedCate1}">
+          [[${ct1.cate1_name}]]
+        </option>
       </select>
+      <select name="cate2" class="shot">
+        <option>2차유형</option>
+        <option disabled th:if="${cate2List == null}">1차유형을 선택을 해주세요.</option>
 
-      <!--자묻질, 문사만-->
-      <select>
-        <option>1차 선택</option>
+        <!--cate2가 존재하면 선택해주세요 안내문빼고 list 출력시키기 그리고 selected 적용할 것.-->
+        <option th:if="${cate2List != null}" th:each="ct2:${cate2List}"
+                th:value="${ct2.cate2}"      th:selected="${ct2.cate2 eq selectedCate2}">
+          [[${ct2.cate2_name}]]
+        </option>
       </select>
-      <select>
-        <option>2차 선택</option>
-      </select>
+    </th:block>
 
-      <article>
-        <table id="faq">
-          <tr>
-            <th><input type="checkbox" class="allChk"/></th>  <!--notice faq qna-->
-            <th>번호</th>  <!--notice faq qna-->
-            <th>유형</th>  <!--notice-->
-            <th>1차유형</th>  <!--faq qna-->
-            <th>2차유형</th>  <!--faq qna-->
-            <th><a href="#">제목</a></th>  <!--notice faq qna-->
-            <th>작성자</th>  <!--qna-->
-            <th>조회</th>  <!--notice faq-->
-            <th>날짜</th>  <!--notice faq qna-->
-            <th>관리</th>  <!--notice faq-->
-            <th>상태</th>  <!--qna-->
-          </tr>
+    <article>
+      <table>
+        <tr>
+          <th><input type="checkbox" class="allChk"/></th>
+          <th>번호</th>
+          <th th:if="${group eq 'notice'}">유형</th>
+          <th th:if="${group eq 'faq' or group eq 'qna'}">1차유형</th>
+          <th th:if="${group eq 'faq' or group eq 'qna'}">2차유형</th>
+          <th><a href="#">제목</a></th>
+          <th th:if="${group eq 'qna'}">작성자</th>
+          <th th:if="${group eq 'notice' or group eq 'faq'}">조회</th>
+          <th>[[${group eq 'qna'? '작성일':'날짜'}]]</th>
+          <th th:if="${group eq 'notice' or group eq 'faq'}">관리</th>
+          <th th:if="${group eq 'qna'}">상태</th>  <!--qna-->
+        </tr>
 
-          <tr>
-            <td><input type="checkbox"></td>
-            <td>12</td>
-            <td>회원</td>
-            <td>쿠폰/혜택</td>
-            <td>쿠폰/이벤트</td>
-            <td class="tit"><a>상품 구입관련 문의드립니다.</a></td>
-            <td>김덕배</td>
-            <td>120</td>
-            <td>23.10.20</td>
-            <td>
-              <a href="#">[삭제]</a><br>
-              <a href="#">[수정]</a>
-            </td>
-            <td>답변완료</td>
-          </tr>
+        <tr class="adminList" th:each="list:${adminCsList.csList}">
+          <td><input type="checkbox" th:value="${list.no}"></td>
+          <td th:text="${list.no}"></td>
+          <td th:text="${list.cate1.cate1_name}" th:if="${group eq 'notice'}"></td>
+          <td th:text="${list.cate1.cate1_name}" th:if="${group eq 'faq' or group eq 'qna'}"></td>
+          <td th:text="${list.cate2.cate2_name}" th:if="${group eq 'faq' or group eq 'qna'}"></td>
+          <td class="tit">
+            <a th:text="${list.title}"
+               th:href="@{'/admin/cs/' + ${group} + '/view?'
+               + ${selectedCate1 != null ? 'cate1=' + selectedCate1 + '&' : ''}
+               + ${selectedCate2 != null ? 'cate2=' + selectedCate2 + '&' : ''}
+               + 'no=' + ${list.no} + '&pg=' + ${adminCsList.pg}}"></a>
+          </td>
+          <td th:text="${list.uid.uid}" th:if="${group eq 'qna'}"></td>
+          <td th:text="${list.hit}" th:if="${group eq 'notice' or group eq 'faq'}"></td>
+          <td th:text="${list.yyMMdd}"></td>
+          <td th:if="${group eq 'notice' or group eq 'faq'}">
+            <a href="#">[삭제]</a><br>
+            <a th:href="@{'/admin/cs/' + ${group} + '/modify?'
+            + ${selectedCate1 != null ? 'cate1=' + selectedCate1 + '&' : ''}
+            + ${selectedCate2 != null ? 'cate2=' + selectedCate2 + '&' : ''}
+            + 'no=' + ${list.no}}">[수정]</a>
+          </td>
+          <td th:if="${group eq 'qna'}" th:text="${list.parent eq -1?'답변완료':'검토중'}"></td>
+        </tr>
+      </table>
 
-          <!-- data가 없을 경우 출력
-          <tr th:if="${pageResponseDTO.total < 1}">
-            <td style="text-align: center; font-size: 14px; padding: 50px 0;">
-              <i class="fa-regular fa-face-sad-tear" style="color: grey; font-size: 100px;"></i><br><br>
-              등록된 문의 내용이 없습니다.
-            </td>
-          </tr>-->
-
-        </table>
-
-        <!--<div class="page" th:if="${pageResponseDTO.total > 0}">
-          <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.start-1})}"
-             class="prev" th:if="${pageResponseDTO.prev}">
-            이전
-          </a>
-
-          <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
-            <a th:href="@{/cs/qna/list(cate=free, pg=${num})}" th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
-          </th:block>
-
-          <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.end+1})}"
-             class="next" th:if="${pageResponseDTO.next}">
-            다음
-          </a>
-        </div>-->
-        <div class="paging">
+      <div class="paging" th:if="${adminCsList.total > 0}">
         <a href="#" class="btnCD">선택삭제</a> <!--좌측 정렬-->
 
         <span class="prev">
-          <a href="#">이전</a>
+            <a th:href="@{'/admin/cs/' + ${group} + '/list?'
+            + ${selectedCate1 != null ? 'cate1=' + selectedCate1 + '&' : ''}
+            + ${selectedCate2 != null ? 'cate2=' + selectedCate2 + '&' : ''}
+            + 'pg=' + ${adminCsList.start-1}}"
+               th:if="${adminCsList.prev}">
+              이전
+            </a>
         </span>
+
         <span class="num">
-          <a class="num on">1</a>
-          <a class="num">2</a>
-          <a class="num">3</a>
+            <th:block th:each="num:${#numbers.sequence(adminCsList.start, adminCsList.end)}">
+              <a th:href="@{'/admin/cs/' + ${group} + '/list?'
+              + ${selectedCate1 != null ? 'cate1=' + selectedCate1 + '&' : ''}
+              + ${selectedCate2 != null ? 'cate2=' + selectedCate2 + '&' : ''}
+              + 'pg=' + ${num}}"
+                 th:classappend="${adminCsList.pg eq num ? 'num on' : 'num'}">
+                [[${num}]]
+              </a>
+            </th:block>
         </span>
+
         <span class="next">
-          <a href="#">다음</a>
+            <a th:href="@{'/admin/cs/' + ${group} + '/list?'
+            + ${selectedCate1 != null ? 'cate1=' + selectedCate1 + '&' : ''}
+            + ${selectedCate2 != null ? 'cate2=' + selectedCate2 + '&' : ''}
+            + 'pg=' + ${adminCsList.end+1}}"
+               th:if="${adminCsList.next}">
+              다음
+            </a>
         </span>
 
-        <a href="#" class="btnWrite">작성하기</a> <!--우측 정렬-->
+        <th:block th:if="${group eq 'faq' or group eq 'notice'}">
+          <a th:href="@{'/admin/cs/' + ${group} + '/write'}" class="btnWrite">작성하기</a> <!--우측 정렬-->
+        </th:block>
       </div>
-      </article>
 
-
-    </section>
+    </article>
   </section>
+</section>
 </html>
