--- a/src/main/resources/templates/admin/cs/reply.html
+++ b/src/main/resources/templates/admin/cs/reply.html
@@ -2,14 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/admin/admin_layout.html}">
-<section layout:fragment="content" id="qna">
+<head>
+  <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
+</head>
+<section layout:fragment="content" th:id="${group}">
 
-  <head>
-    <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
-  </head>
-
-  <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
-    <!-- nav 들어올 영역 -->
+  <nav>
+    <h3>[[${groupName}]] 보기</h3>
+    <p>
+      HOME > 고객센터 > <strong>[[${groupName}]]</strong>
+    </p>
   </nav>
 
   <article id="reply">
