--- a/src/main/resources/templates/admin/cs/view.html
+++ b/src/main/resources/templates/admin/cs/view.html
@@ -2,63 +2,57 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/admin/admin_layout.html}">
-  <section layout:fragment="content" id="qna">
+<head>
+  <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
+</head>
+<section layout:fragment="content" th:id="${group}">
 
-    <head>
-      <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
-    </head>
+  <nav>
+    <h3>[[${groupName}]] 보기</h3>
+    <p>
+      HOME > 고객센터 > <strong>[[${groupName}]]</strong>
+    </p>
+  </nav>
 
-    <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
-      <!-- nav 들어올 영역 -->
-    </nav>
+  <article id="view">
 
-    <article id="view">
+    <table>
+      <tr>
+        <td>유형</td>
+        <td>
+          [[${view.cate1.cate1_name}]]
+          <th:block th:if="${group ne 'notice'}">
+            - [[${view.cate2.cate2_name}]]
+          </th:block>
+        </td>
+      </tr>
 
-      <table>
-        <tr>
-          <td>유형</td>
-          <td>
-            고객서비스
-          </td>
-        </tr>
+      <tr>
+        <td>제목</td>
+        <td th:text="${view.title}"></td>
+      </tr>
 
-        <tr>
-          <td>제목</td>
-          <td>
-            개인회원간 법인회원에 차이가 있나요?
-          </td>
-        </tr>
+      <tr>
+        <td>내용</td>
+        <td>
+          <p th:utext="${view.brContent}"></p>
+        </td>
+      </tr>
 
-        <tr>
-          <td>내용</td>
-          <td>
-            <p>
-              개인회원은 본인인증, 법인회원은 사업자등록번호를<br>
-              기준으로 사업자 인증 후 가입 가능합니다.
-            </p>
-          </td>
-        </tr>
+      <tr th:if="${view.parent < 0}">
+        <td>답변</td>
+        <td>
+          <p th:utext="${answer.brContent}"></p>
+        </td>
+      </tr>
+    </table>
 
-        <tr>
-          <td>답변</td>
-          <td>
-            <p>
-              멋진 답변 드립니다.<br>
-              동해물과 백두산이 마르고 닳도록<br>
-              하느님이 보우하사 우리나라 만세<br>
-              무궁화 삼천리 화려강산<br>
-              대한사람 대한으로 길이 보전하세
-            </p>
-          </td>
-        </tr>
-      </table>
+    <div id="buttons">
+      <a href="#" class="btnDelete">삭제</a>
+      <a th:href="@{'/admin/cs/' + ${group} + '/modify?' + ${cate1param} + ${cate2param} + 'no=' + ${view.no}}" class="btnModify">수정</a>
+      <a th:href="@{'/admin/cs/' + ${group} + '/list?' + ${cate1param} + ${cate2param} + 'no=' + ${view.no}}" class="btnList">목록</a>
+    </div>
 
-      <div id="buttons">
-        <a href="#" class="btnDelete">삭제</a>
-        <a href="#" class="btnModify">수정</a>
-        <a href="#" class="btnList">목록</a>
-      </div>
-
-    </article>
-  </section>
+  </article>
+</section>
 </html>
