--- a/src/main/resources/templates/admin/cs/write.html
+++ b/src/main/resources/templates/admin/cs/write.html
@@ -4,63 +4,63 @@
       layout:decorate="~{/fragments/admin/admin_layout.html}">
 <head>
   <script th:src="@{/js/cs/cs_qnaCate.js}"></script>
+  <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
 </head>
-  <section layout:fragment="content" id="qna">
-    <!--<input type="hidden" name="url" th:value="${jsonUrl}">-->
+<section layout:fragment="content" th:id="${group}">
+  <!--<input type="hidden" name="url" th:value="${jsonUrl}">-->
 
-    <head>
-      <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
-    </head>
+  <nav>
+    <h3>[[${groupName}]] 보기</h3>
+    <p>
+      HOME > 고객센터 > <strong>[[${groupName}]]</strong>
+    </p>
+  </nav>
 
-    <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
-      <!-- nav 들어올 영역 -->
-    </nav>
+  <article id="write">
 
-    <article id="write">
+    <form>
+      <table>
+        <tr>
+          <td>문의유형</td>
+          <td>
 
-      <form>
-        <table>
-          <tr>
-            <td>문의유형</td>
-            <td>
+            <select name="cate1">
+              <option value="0">1차유형</option>
+              <option>
+                회원
+              </option>
+            </select>
 
-              <select name="cate1">
-                <option value="0">1차유형</option>
-                <option>
-                  회원
-                </option>
-              </select>
+            <select name="cate2" th:if="${group eq 'faq'}">
+              <option value="0">2차유형</option>
+              <option>
+                가입/탈퇴
+              </option>
+            </select>
+          </td>
+        </tr>
 
-              <select name="cate2">
-                <option value="0">2차유형</option>
-                <option>
-                  가입/탈퇴
-                </option>
-              </select>
-            </td>
-          </tr>
+        <tr>
+          <td>문의제목</td>
+          <td>
+            <input type="text" name="title" placeholder="제목을 입력하세요."/>
+          </td>
+        </tr>
+        <tr>
+          <td>문의내용</td>
+          <td>
+            <textarea name="content" placeholder="내용을 입력하세요."></textarea>
+          </td>
+        </tr>
+      </table>
 
-          <tr>
-            <td>문의제목</td>
-            <td>
-              <input type="text" name="title" placeholder="제목을 입력하세요."/>
-            </td>
-          </tr>
-          <tr>
-            <td>문의내용</td>
-            <td>
-              <textarea name="content" placeholder="내용을 입력하세요."></textarea>
-            </td>
-          </tr>
-        </table>
+      <div id="buttons">
+        <a class="btnCancel"/>취소하기</a>
+        <input type="submit" class="btnWrite" value="등록하기"/>
+      </div>
 
-        <div id="buttons">
-          <a class="btnCancel"/>취소하기</a>
-          <input type="submit" class="btnWrite" value="등록하기"/>
-        </div>
+    </form>
+  </article>
 
-      </form>
-    </article>
-
-  </section>
+</section>
 </html>
