--- a/src/main/resources/templates/cs/qna/modify.html
+++ b/src/main/resources/templates/cs/qna/modify.html
@@ -7,7 +7,7 @@
   <script th:src="@{/js/cs/cs_qnaModify.js}"></script>
 </head>
   <article layout:fragment="content">
-    <input type="hidden" name="url" th:value="${jsonUrl}">
+    <input type="hidden" name="url" th:value="${path}">
     <form th:action="@{/cs/qna/modify}" method="post" id="modify">
       <input type="hidden" name="no"     th:value="${view.no}"/>
       <input type="hidden" name="parent" th:value="${view.parent}"/>
