--- a/src/main/resources/templates/cs/qna/write.html
+++ b/src/main/resources/templates/cs/qna/write.html
@@ -6,7 +6,7 @@
   <script th:src="@{/js/cs/cs_qnaCate.js}"></script>
 </head>
   <article layout:fragment="content">
-    <input type="hidden" name="url" th:value="${jsonUrl}">
+    <input type="hidden" name="url" th:value="${path}">
     <form th:action="@{/cs/qna/write}" method="post" id="write">
       <!-- uid는 나중에 session에 담긴 uid 정보 담기 -->
       <input type="hidden" name="group" value="qna"/>
