--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -88,13 +88,15 @@
                 <!-- 상품목록 컨텐츠 시작 -->                                
                 <section>
                     <div>
-                        <select name="search">
-                            <option value="search1">상품명</option>
-                            <option value="search1">상품코드</option>
-                            <option value="search1">제조사</option>
-                            <option value="search1">판매자</option>                                    
-                        </select>
-                        <input type="text" name="search">
+                        <form th:action="@{/admin/product/searchProduct}" method="post">
+                            <select name="searchType">
+                                <option value="prodName">상품명</option>
+                                <option value="prodNo">상품코드</option>
+                                <option value="prodCompany">제조사</option>
+                                <option value="seller">판매자</option>
+                            </select>
+                            <input type="text" name="search">
+                        </form>
                     </div>
                     <table>
                         <tr>
@@ -123,14 +125,14 @@
                             <td>[[${product.seller}]]</td>
                             <td>[[${product.hit}]]</td>
                             <td>
-                                <a id="deleteProduct" th:href="@{/admin/product/delete(prodNo=${product.prodNo})}">[삭제]</a>
+                                <a th:href="@{/admin/product/delete(prodNo=${product.prodNo})}">[삭제]</a>
                                 <a th:href="@{/admin/product/modify(prodNo=${product.prodNo})}">[수정]</a>
                             </td>
                         </tr>
                     </table>
 
                     
-                    <input type="button" value="선택삭제" />                          
+                    <input type="button" class="deleteProduct" value="선택삭제" />
 
 
                     <div class="paging">
@@ -159,78 +161,7 @@
                     전자상거래 등에서의 상품 등의 정보제공에 관한 고시에 따라 총 35개 상품군에 대해 상품 특성 등을 양식에 따라 입력할 수 있습니다.
                 </p>
 
-                <script>
-
-                    $(function (){
-
-                        // SELECT ALL
-                        $('#selectAll').on('change', function() {
-                            console.log('selectAll');
-
-                            // ALL CHECK CHECKED
-                            var allChecked = $(this).prop('checked');
-                            // ALL CHECKBOX CHECKED
-                            $('input[name^="prod"]').prop('checked', allChecked);
-
-                            var selectedCartNos = "/";
-                            const path = $('#path').val();
-
-                            $('.deleteProduct').click(function (e) {
-                                e.preventDefault();
-                                alert('click');
-                                console.log('delete here...1');
-                                // 체크돼있는 prodNo를 배열로 만들어 넣음
-                                $('input[name^="prod"]:checked').each(function () {
-                                    selectedCartNos = selectedCartNos + $(this).val() + "/";
-                                    //selectedCartNos.push($(this).val());
-                                    console.log('반복');
-                                });
-                                console.log('delete here...2');
-                                console.log('delete path: ' + path);
-                                console.log(selectedCartNos);
-                                // 체크돼있는 prodNo를 배열이 없다면 돌려보냄.
-                                if (selectedCartNos === "/") {
-                                    alert('선택된 상품이 없습니다.');
-                                    return;
-                                }
-                                console.log('delete here...3');
-                                // 체크된 prodNo 전체와 uid를 jsonData로 만듬
-                                const jsonData = {
-                                    "selectedCartNos": selectedCartNos
-                                };
-
-                                console.log(JSON.stringify(jsonData));
-                                if (confirm('선택된 상품을 장바구니에서 삭제하시겠습니까?')) {
-                                    console.log('delete here...4');
-                                    // jsonData를 전송
-                                    // traditional: true는 배열을 ajax로 보낼때 있어야됨.
-                                    $.ajax({
-                                        url: path + '/product/deleteCartProduct',
-                                        type: 'post',
-                                        data: JSON.stringify(jsonData),
-                                        //traditional: true,
-                                        dataType: 'json',
-                                        contentType: 'application/json;charset=UTF-8',
-                                        success: function (data) {
-                                            console.log('delete here...5');
-                                            // 삭제가 성공적으로 됐을때 알림 띄워주고 창 새로고침
-                                            if (data > 0) {
-                                                alert('장바구니에서 삭제되었습니다.');
-                                                window.location.href = path + '/product/cart';
-                                            } else if (data < 1) {
-                                                alert('다시 시도해주세요.');
-                                                return;
-                                            }
-                                        }
-                                    })// ajax end
-                                } else {
-                                    return;
-                                }// 삭제 confirm end
-                            }); // 선택삭제 click end
-
-                        });
-                    });
-                </script>
+                <script th:src="@{/js/admin/checkDelete.js}"></script>
 
                 <!-- 상품목록 컨텐츠 끝 -->
             </section>
