관리자 상품 목록

--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -131,8 +131,8 @@
                         </tr>
                     </table>
 
-                    
-                    <input type="button" class="deleteProduct" value="선택삭제" />
+
+                    <button type="button" class="deleteProduct">선택삭제</button>
 
 
                     <div class="paging">
