--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -226,7 +226,7 @@ label {
 
 input {
     width: 200px;
-    padding: 6px;
+    padding: 7px;
     border: 1px solid #959595;
     font-size: 13px;            
     background-color: #fefefe;
@@ -286,6 +286,17 @@ button[type=submit] {
     vertical-align: middle;
 }
 
+.deleteProduct {
+    width: 100px;
+    margin-top: 10px;
+    padding: 7px;
+    border: 1px solid #959595;
+    font-size: 13px;
+    background-color: #fefefe;
+    color: #333;
+    vertical-align: middle;
+    box-sizing: border-box;
+}
 
 /* admin-index */
 #admin-index {}        
